--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,12 @@ repository               : "https://github.com/d-vf"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "DVF"
   pronouns         : # example: "she/her"  
   bio              : #"Short biography for the left-hand sidebar"
   location         : "Earth"
-  employer         : "Instituto Superior Técnico & Carnegie Mellow University"
+  employer         : "Instituto Superior Técnico"
+  employer         : "Carnegie Mellow University"
   uri              : # URL
   email            : #"none@example.org" 
 
@@ -48,7 +49,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : #"bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
