--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,9 @@ author:
   pronouns         : # example: "she/her"  
   bio              : #"Short biography for the left-hand sidebar"
   location         : "Earth"
-  employer         : "Instituto Superior Técnico"
-  employer         : "Carnegie Mellow University"
+  employer         : 
+    - "Instituto Superior Técnico"
+    - "Carnegie Mellon University"
   uri              : # URL
   email            : #"none@example.org" 
 
