--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : #"Short biography for the left-hand sidebar"
   location         : "Earth"
-  employer1        : "IST/Lisboa & CMU"
+  employer         : "IST/Lisboa & CMU"
   uri              : # URL
   email            : #"none@example.org" 
 
