--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,9 @@ author:
   name             : "DVF"
   pronouns         : # example: "she/her"  
   bio              : #"Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "IST/Lisboa & CMU"
+  location : "Instituto Superior Técnico"
+  employer : "Carnegie Mellon University"
+  #employer         : "IST/Lisboa & CMU"
   uri              : # URL
   email            : #"none@example.org" 
 
