--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Diana Vieira Fernandes"
+title                    : ""
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
@@ -21,8 +21,8 @@ repository               : "https://github.com/d-vf"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "DVF"
+  #avatar           : "profile.png"
+  name             : "Diana Vieira Fernandes"
   pronouns         : # example: "she/her"  
   bio              : #"Short biography for the left-hand sidebar"
   location : "Instituto Superior Técnico"
