--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "https://github.com/d-vf"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "10419145.jpeg"
   name             : "Diana Vieira Fernandes"
   pronouns         : # example: "she/her"  
   bio              : #"Short biography for the left-hand sidebar"
