--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "DVF"
+title                    : "Diana Vieira Fernandes"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
